# throwEngine

./: .gitignore  README.md  setupEngine.txt
Desktop/.github/workflows/: ci.yml
throwEngine/: CMakeLists.txt  CMakePresets.json  README.md  build.sh  clean.bat  clean.sh  cpp.hint  klasorYapisi.txt  setup.bat  setup.sh  vcpkg.json
throwEngine/.github/workflows/: ci.yml
throwEngine/engine/: CMakeLists.txt  Config.h  EngineProblem.txt
throwEngine/engine/engine/: Config.h
throwEngine/engine/engine/assets/materialJSON/: materials.json
throwEngine/engine/include/CallBack/: CallBack.h
throwEngine/engine/include/ImGui/: ImGuiLayer.h  ImGuiObjectState.h  ImGuiScoped.h
throwEngine/engine/include/Input/: Input.h  InputComponent.h  InputComponentFactory.h  InputContext.h
throwEngine/engine/include/Scene/: Scene.h  SceneObject.h  SceneObjectFactory.h
throwEngine/engine/include/Shaders/: BasicShader.h  GridShader.h  LightShader.h  ShaderInterface.h  ShaderManager.h  ShaderProgram.h
throwEngine/engine/include/core/: CameraNotes.txt  Config.h.in  Debug.h  Engine.h  Window.h
throwEngine/engine/include/graphics/Camera/: Camera.h  CameraController.h
throwEngine/engine/include/graphics/GLTransformations/: TransformController.h  Transformations.h
throwEngine/engine/include/graphics/Grid/: GridData.h  GridRenderer.h  GridSystem.h
throwEngine/engine/include/graphics/Lighting/: Light.h  LightData.h  LightManager.h
throwEngine/engine/include/graphics/Material/: MaterialLib.h
throwEngine/engine/include/graphics/Mesh/: GLMesh3D.h  GLMeshCircle3D.h  GLMeshCube3D.h  GLMeshData3D.h  GLMeshFactory.h  GLMeshInterface.h  GLMeshSphere3D.h  GLMeshSquare3D.h  GLMeshTriangle3D.h
throwEngine/engine/include/graphics/Renderer/: RenderData.h  Renderer.h
throwEngine/engine/include/graphics/Textures/: Textures.h  stb_image.h
throwEngine/engine/src/CallBack/: CallBack.cpp
throwEngine/engine/src/ImGui/: ImGuiLayer.cpp  ImGuiScoped.cpp
throwEngine/engine/src/Input/: Input.cpp  InputComponent.cpp  InputComponentFactory.cpp
throwEngine/engine/src/Scene/: Scene.cpp  SceneObject.cpp  SceneObjectFactory.cpp
throwEngine/engine/src/Shaders/: BasicShader.cpp  GridShader.cpp  LightShader.cpp  ShaderManager.cpp  ShaderProgram.cpp
throwEngine/engine/src/core/: Engine.cpp  File.cpp  Window.cpp
throwEngine/engine/src/graphics/Camera/: Camera.cpp  CameraController.cpp
throwEngine/engine/src/graphics/GLTransformations/: TransformController.cpp  Transformations.cpp
throwEngine/engine/src/graphics/Grid/: GridData.cpp  GridRenderer.cpp  GridSystem.cpp
throwEngine/engine/src/graphics/Lighting/: Light.cpp  LightData.cpp  LightManager.cpp
throwEngine/engine/src/graphics/Material/: MaterialLib.cpp
throwEngine/engine/src/graphics/Mesh/: GLMesh3D.cpp  GLMeshCircle3D.cpp  GLMeshCube3D.cpp  GLMeshData3D.cpp  GLMeshFactory.cpp  GLMeshSphere3D.cpp  GLMeshSquare3D.cpp  GLMeshTriangle3D.cpp
throwEngine/engine/src/graphics/Renderer/: RenderData.cpp  Renderer.cpp
throwEngine/engine/src/graphics/Textures/: Textures.cpp  stb_image.cpp
throwEngine/game/: CMakeLists.txt
throwEngine/game/include/objects/: GameObject.h
throwEngine/game/src/core/: main.cpp
